The Safe Place v0.6.3 It's raining heavily today
# CHANGELOG v0.6.3 - "It's raining heavily today"

**Data di rilascio:** 26 Gennaio 2025
**Codename:** "It's raining heavily today"
**Tipo di release:** Major Feature Update

## 🌧️ Panoramica della Release

La versione 0.6.3 introduce significativi miglioramenti al sistema di gioco con focus particolare sul sistema meteo dinamico, correzioni critiche al sistema rifugi e miglioramenti all'esperienza utente. Questa release completa l'implementazione delle funzionalità core identificate nella specifica game-improvements-v0-6-1.

## ✨ Nuove Funzionalità

### 🏠 Sistema Rifugi Completamente Rivisto
- **Regole di accesso corrette**: Ogni rifugio può essere visitato solo una volta durante il giorno
- **Accesso notturno sempre disponibile**: I rifugi rimangono accessibili di notte per il riposo
- **Sistema investigazione per sessione**: Ogni rifugio può essere investigato solo una volta per sessione di gioco
- **Persistenza stato**: Lo stato dei rifugi viene mantenuto tra le visite
- **Messaggi informativi migliorati**: Feedback chiaro per il giocatore sulle regole dei rifugi

### 🌦️ Sistema Meteo Dinamico Avanzato
- **Integrazione movimento-meteo**: Il meteo influenza ora il tempo necessario per il movimento
- **Effetti meteo realistici**: Tempeste e pioggia intensa rallentano significativamente il movimento
- **Danni da condizioni estreme**: Possibilità di subire danni durante tempeste violente (15% chance) o pioggia intensa (8% chance)
- **Consumo risorse dinamico**: Il meteo influenza il consumo di fame e sete durante il movimento
- **Messaggi atmosferici immersivi**: Sistema di messaggi casuali basati sulle condizioni meteo correnti

### 📊 Bilanciamento Eventi
- **Probabilità eventi ridotta**: Ridotta dal 25% al 20% per migliorare il ritmo di gioco
- **Modificatori meteo**: La probabilità degli eventi viene ora influenzata dalle condizioni meteorologiche

## 🔧 Miglioramenti Tecnici

### 🏗️ Architettura Sistema Rifugi
```t

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.6.2",
-  "codename": "I Save You",
+  "version": "0.6.3",
+  "codename": "It's raining heavily today",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D e atmosfera CRT anni '80",
   "author": "TheSafePlace Development Team",
