The Safe Place v0.7.0 Top-Ranking Kid
# Changelog: The Safe Place v0.7.0 - "Top-Ranking Kid"

Questa versione rappresenta un punto di svolta cruciale per The Safe Place. L'obiettivo primario era stabilizzare il gioco dopo una profonda ristrutturazione tecnica (il passaggio a Zustand) che aveva introdotto significative regressioni. Abbiamo affrontato e risolto bug critici, migliorato l'architettura del codice e ricostruito da zero una delle meccaniche di gioco fondamentali: il sistema di Level Up.

## Correzioni di Bug e Miglioramenti Architettonici

La strada verso la stabilità ha richiesto interventi mirati su diversi fronti:

- **Stabilizzazione dello Stato Globale (Zustand)**: Risolti i crash iniziali e i loop infiniti causati da una gestione non ottimale dello stato dopo il refactoring.
- **Risoluzione Bug di Navigazione e UI**:
  - Il tasto ESC ora funziona correttamente per chiudere le schermate "Istruzioni" e "Storia".
  - Risolto un bug critico nel pannello Impostazioni dove la disattivazione dell'effetto CRT nascondeva l'intera schermata di gioco.
- **Ripristino della Camera di Gioco**: La logica della camera sulla mappa era completamente interrotta. È stato recuperato l'algoritmo di calcolo originale dalla documentazione di progetto e reimplementato, ripristinando il corretto movimento e centraggio della visuale sul giocatore.
- **Architettura dello Stato di Gioco**: Il problema più grave che impediva la progressione era un vecchio `<GameProvider>` che resettava lo stato del personaggio dopo determinate azioni (come il level up o il caricamento di un salvataggio). Questo componente è stato rimosso e la gestione dello stato è stata centralizzata in Zustand, risolvendo alla radice i problemi di salvataggio e persistenza dei dati.
- **Sistema di Eventi**: La funzione `resolveChoice` è stata riscritta per gestire correttamente tutti i tipi di ricompense e penalità (danno, esperienza, oggetti, etc.), rendendo gli eventi di gioco molto più robusti.

## Ricostruz

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.6.4",
-  "codename": "It's raining heavily today",
+  "version": "0.7.0",
+  "codename": "Top-Ranking Kid",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D e atmosfera CRT anni '80",
   "author": "TheSafePlace Development Team",
