--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.8.4",
-  "codename": "I'm Constantly Tidying Up my Desk",
+  "version": "0.8.5",
+  "codename": "Crafting Full and Real Integration",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D e atmosfera CRT anni '80",
   "author": "TheSafePlace Development Team",
