The Safe Place v0.9.7 This is Ultimo's Story
# CHANGELOG v0.9.7 - "This is Ultimo's Story"

**Data di Rilascio**: 15 Gennaio 2025
**Tipo di Release**: Major Feature Update
**Focus**: Implementazione Sistema Narrativo Canonico

---

## 🎭 NUOVE FUNZIONALITÀ PRINCIPALI

### Sistema Narrativo Canonico Completo

#### 📚 **Narrative Store (`src/stores/narrative/narrativeStore.ts`)**
- **Stato Emotivo Complesso**: Implementato sistema a 9 parametri per Ultimo
  - `compassionLevel`: Livello di compassione (0-100)
  - `pragmatismLevel`: Livello di pragmatismo (0-100)
  - `understandingLevel`: Comprensione del passato (0-100)
  - `lenaMemoryStrength`: Forza dei ricordi della madre (0-100)
  - `elianEmpathy`: Empatia verso il padre (0-100)
  - `innocenceLost`: Innocenza perduta (0-100)
  - `wisdomGained`: Saggezza acquisita (0-100)
  - `currentMood`: Umore attuale (curioso, malinconico, determinato, etc.)
  - `dominantEmotion`: Emozione dominante (nostalgia, speranza, dolore, etc.)

- **Sistema di Quest Principale**: 6 stadi narrativi principali
  - `awakening`: Il risveglio di Ultimo
  - `discovery`: Scoperta del mondo post-apocalittico
  - `understanding`: Comprensione della situazione
  - `choice`: Momento delle scelte cruciali
  - `consequence`: Conseguenze delle azioni
  - `resolution`: Risoluzione della storia

- **Sistema di Allineamento Morale**:
  - Compassionevole: Focus su empatia e aiuto
  - Pragmatico: Focus su sopravvivenza e efficienza
  - Equilibrato: Bilanciamento tra compassione e pragmatismo

#### 🎨 **Interfacce Narrative (`src/interfaces/narrative.ts`)**
- **Definizioni TypeScript Complete**:
  - `EmotionalState`: Stato emotivo complesso
  - `QuestStage`: Stadi della quest principale
  - `LoreEvent`: Eventi narrativi con scelte morali
  - `QuestFragment`: Frammenti della storia principale
  - `NarrativeChoice`: Scelte del giocatore con conseguenze
  - `TextTone`: Toni narrativi (malinconico, poetico, introspettivo, etc.)
  - `MoralAlignment`: Allineamenti mo

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.9.6.1",
-  "codename": "Phoenix",
+  "version": "0.9.7",
+  "codename": "This is Ultimo's Story",
   "type": "module",
-  "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D e atmosfera CRT anni '80",
+  "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D, atmosfera CRT anni '80 e sistema narrativo canonico immersivo",
   "author": "TheSafePlace Development Team",
   "license": "MIT",
   "keywords": [
@@ -15,7 +15,11 @@
     "retro",
     "crt",
     "survival",
-    "d&d"
+    "d&d",
+    "narrative",
+    "storytelling",
+    "emotional-ai",
+    "interactive-fiction"
   ],
   "homepage": "https://github.com/TheSafePlace-React",
   "repository": {
