The Safe Place v0.9.7.4 The Fix Era Part 1
# CHANGELOG - The Safe Place v0.9.7.4 "The Fix Era Part 1"

**Codename**: "The Fix Era Part 1"
**Tipo Rilascio**: Correzione Critica e Debugging
**Stato**: Rilascio con Problemi Noti

---

## 📋 PANORAMICA RILASCIO

La versione v0.9.7.4 rappresenta un importante sforzo di debugging e correzione del sistema crafting, con focus particolare sulla risoluzione di problemi critici che impedivano il corretto funzionamento del banco di lavoro. Nonostante i significativi progressi ottenuti, alcuni problemi persistono e richiedono ulteriore analisi.

### 🎯 OBIETTIVI PRINCIPALI
- Risoluzione problema attivazione banco di lavoro
- Correzione sistema caricamento ricette
- Eliminazione conflitti file di configurazione
- Implementazione sistema debug avanzato
- Miglioramento stabilità architetturale

### ⚠️ PROBLEMI NOTI
- **CRITICO**: Sistema crafting non funzionale per `knownRecipeIds` vuoto
- Impossibilità di craftare oggetti nonostante materiali disponibili

---

## 🔧 CORREZIONI IMPLEMENTATE

### 1. RISOLUZIONE PROBLEMA BANCO DI LAVORO
**Problema**: Il banco di lavoro nei rifugi non si attivava quando si premeva ENTER, nonostante il giocatore fosse nella posizione corretta (tile 'R').

**Causa Identificata**: La posizione del giocatore era (-1, -1) a causa di problemi di sincronizzazione tra gameStore e worldStore.

**Soluzione Implementata**:
- ✅ Modificata la funzione `handleWorkbench()` per usare direttamente `useWorldStore.getState()`
- ✅ Aggiunta verifica della validità della mappa e della posizione del giocatore
- ✅ Implementato logging dettagliato per tracciare:
  - Posizione del giocatore dal worldStore
  - Tile corrente dalla mappa
  - Lunghezza dei dati della mappa
  - Validazione della posizione

**File Modificato**: `src/components/ShelterScreen.tsx`

**Risultato**: ✅ Banco di lavoro ora accessibile correttamente

### 2. CORREZIONE ERRORE IMPORT MANCANTE
**Problema**: `ReferenceError: useInventoryStore is not defined` in Cr

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.9.7.3",
-  "codename": "We shore up the building",
+  "version": "0.9.7.4",
+  "codename": "The Fix Era Part 1",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D, atmosfera CRT anni '80 e sistema narrativo canonico immersivo",
   "author": "TheSafePlace Development Team",
