--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.9.7.4",
-  "codename": "The Fix Era Part 1",
+  "version": "0.9.9.5",
+  "codename": "The Fix Era Part 2",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D, atmosfera CRT anni '80 e sistema narrativo canonico immersivo",
   "author": "TheSafePlace Development Team",
@@ -72,6 +72,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.44.0",
     "vite": "^6.0.3"
   }
 }
