--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-safe-place",
   "private": true,
-  "version": "0.9.9.0",
-  "codename": "Architecture Reset",
+  "version": "0.9.9.1",
+  "codename": "Testing, Cleaning, and Optimization",
   "type": "module",
   "description": "The Safe Place - GDR Retrocomputazionale a Fosfori Verdi - Sistema di gioco avanzato con meccaniche D&D, atmosfera CRT anni '80 e sistema narrativo canonico immersivo",
   "author": "TheSafePlace Development Team",
@@ -37,8 +37,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:e2e": "cypress open",
-    "test:e2e:headless": "cypress run",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "test:e2e:headed": "cypress run --headed",
     "migrate-docs": "ts-node scripts/documentation-reorganization/migrate.ts",
     "migrate-docs:dry-run": "ts-node scripts/documentation-reorganization/migrate.ts --dry-run"
   },
