THE SAFE PLACE CHRONICLES Versione 1.0.3 Coerenza Narrativa e Visiva
# Log di Sviluppo - Versione 1.0.3 "Coerenza Narrativa e Visiva"

Questa versione è una release di rifinitura mirata a migliorare la qualità dell'esperienza utente e ad approfondire la coerenza narrativa del gioco. Sono state affrontate due aree chiave: il ripristino della chiarezza visiva nel diario di viaggio e l'implementazione di regole più immersive per la progressione della Missione Principale.

### Dettagli dell'Implementazione

#### 1. Ripristino della Coerenza Visiva nel Diario di Viaggio

- **Problema:** L'implementazione del sistema di temi globali, in particolare la modalità ad "Alto Contrasto", causava un problema di specificità CSS. Il colore primario del tema sovrascriveva i colori unici assegnati ai diversi tipi di voci del diario (successo, fallimento, oggetto acquisito, ecc.), riducendo la leggibilità e rimuovendo un importante livello di feedback visivo per il giocatore. Anche la schermata di creazione del personaggio presentava un problema simile.
- **Soluzione:** Il problema è stato risolto con aggiustamenti mirati per aumentare la specificità degli stili dove necessario:
  - **Schermata Creazione Personaggio:** Il testo "Generazione statistiche in corso..." è stato corretto applicando uno stile in linea, garantendo che il colore secondario corretto venga sempre applicato, indipendentemente dal tema.
  - **Diario di Gioco (`GameScreen.tsx`):** La logica di visualizzazione è stata perfezionata. Il contenitore del diario ora imposta un colore di testo secondario come predefinito. I colori specifici per ogni tipo di evento (applicati tramite stili in linea) sovrascrivono naturalmente questo default, garantendo che le voci importanti mantengano il loro colore unico mentre il testo narrativo generico rimane distinto.
- **Impatto:** Il diario di viaggio e gli elementi correlati sono ora pienamente leggibili e visivamente coerenti in tutti i temi, ripristinando un feedback cruciale pe

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "refactoring-of-the-safe-place-chronicles",
+  "name": "the-safe-place-chronicles:-the-echo-of-the-journey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
