feat: Massive Quest Expansion - 4 New Systems (v1.8.1-1.8.4)
feat: Massive Quest Expansion - 4 New Systems (v1.8.1-1.8.4)

Implementati 4 pacchetti di subquest con 9 nuove quest, 3 PNG, 7 trigger types e sistemi di collezione, investigazione, bounty e riparazione.
```

---

## Messaggio Commit Completo

```
feat: Massive Quest Expansion - 4 New Systems (v1.8.1-1.8.4)

SUMMARY
=======
Implementazione di 4 pacchetti di subquest che espandono massivamente il Quest System
con 9 nuove quest, 3 nuovi PNG, sistemi di collezione, investigazione, bounty endless
e riparazione del mondo.

VERSIONI IMPLEMENTATE
=====================

v1.8.1 - "Echi del Mondo Perduto" (Collection System)
------------------------------------------------------
- Nuovo PNG: Anya, la Tecnica (Crocevia)
- Quest collezione con 5 "Echi" collezionabili
- 3 nuovi consequence types: upgradeArmor, learnRecipe, revealMapPOI
- Sistema potenziamento armature
- Eventi special locations (Laboratorio, Biblioteca)

Ricompense Echi:
1. Placca PixelDebh → Ricetta Advanced Repair Kit
2. Chip Drone → Armatura chest +2 Difesa
3. Registrazione Criptica → Deposito Medico rivelato
4. Note Progetto Rinascita → Armatura legs +1 Difesa
5. Biglietto Eurocenter → Multitool Professionale

v1.8.2 - "I Segni della Cenere" (Investigation System)
-------------------------------------------------------
- Nuovo PNG: L'Ascoltatore/Eremita (Foresta)
- Quest investigativa 4-stage con multi-flag trigger
- 3 location rituali da scoprire (ordine libero)
- Sistema setFlag per eventi
- Dissuasore Sonico (oggetto tattico epic, 6h protezione Ash Angels)

Innovazioni:
- Prima quest con trigger multi-flag AND
- SetFlag event handler con auto-check
- Lore sovversiva (Ascoltatori vs Cultisti)

v1.8.3 - "Cacciatori e Prede" (Bounty System)
----------------------------------------------
- Nuovo PNG: Silas, il Cacciatore (Crocevia)
- 3 bounty quest ripetibili (Cinghiali, Lupi, Predoni)
- Trigger enemyDefeated COMPLETAMENTE implementato
- Kill count 

--- a/data/events/easter_eggs.json
+++ b/data/events/easter_eggs.json
@@ -55,9 +55,10 @@
           {
             "type": "direct",
             "results": [
-              { "type": "journalEntry", "text": "Con un certo rispetto, controlli le sue tasche. Trovi un pacchetto di sigarette ancora sigillato e un flacone di antidolorifici. Povero Marco G., qualunque sia stata la sua storia." },
+              { "type": "journalEntry", "text": "Con un certo rispetto, controlli le sue tasche. Trovi un pacchetto di sigarette ancora sigillato, un flacone di antidolorifici e un biglietto da visita professionale. Povero Marco G., qualunque sia stata la sua storia." },
               { "type": "addItem", "value": { "itemId": "MED_PAINKILLER", "quantity": 1 } },
               { "type": "addItem", "value": { "itemId": "cigarettes_pack", "quantity": 1 } },
+              { "type": "addItem", "value": { "itemId": "eurocenter_business_card", "quantity": 1 } },
               { "type": "addXp", "value": 25 }
             ]
           }
