chore(release): update to v1.9.9.9 Golden Master Stabilization
chore(release): update to v1.9.9.9 Golden Master Stabilization

- Update GAME package version to 1.9.9.9
- Fix GAME package name (remove invalid characters)
- Update GAME README with Golden Master status
- Update SITO content and timeline for v1.9.9.9
- Update root README
- Unify critical fixes (Quest, Trading, Data, UI)

--- a/GAME/package.json
+++ b/GAME/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-safe-place-chronicles:-the-echo-of-the-journey",
+  "name": "the-safe-place-chronicles-the-echo-of-the-journey",
   "private": true,
   "version": "1.9.9.9",
   "type": "module",
